# regex-automata

./: .gitignore  .travis.yml  Cargo.toml  PLANS.md  README.md  TODO  TODO.md  appveyor.yml  rust-toolchain
.github/workflows/: ci.yml
bench/: Cargo.toml
bench/src/: bench.rs  inputs.rs
benchmarks/: README.md  compile.toml  dictionary.toml  grep.toml  internal.toml  leipzig.toml  lh3lh3-reb.toml  mariomka.toml  onepass.toml  others.txt  random.toml  regex-redux.toml  rsc.toml  sherlock.toml  subtitle.toml  zherczeg.toml
benchmarks/haystacks/: lines-with-invalid-utf8.txt
benchmarks/haystacks/rsc/: 1K.txt  1MB.txt  32.txt  32K.txt  anchored-literal-long.txt  long-needle1.txt  long-needle2.txt  reverse-suffix-no-quadratic.txt
benchmarks/haystacks/rsc/easy0/: 32.txt
benchmarks/haystacks/rsc/easy1/: 1K.txt  1MB.txt  32.txt  32K.txt
benchmarks/haystacks/rsc/hard/: 1K.txt  32K.txt
benchmarks/haystacks/rsc/medium/: 1K.txt  1MB.txt  32.txt  32K.txt
benchmarks/haystacks/rsc/reallyhard0/: 1MB.txt
benchmarks/haystacks/rsc/reallyhard1/: 1K.txt  1MB.txt  32.txt  32K.txt
benchmarks/regexes/: url
benchmarks/regexes/dictionary/english/: length-15.txt
ci/: script.sh
data/tests/: crazy.json  flags.json  invalid-utf8.json  invalid-utf8.toml  iter.toml  unicode.json
data/tests/fowler/: basic.json  fowler-to-json  nullsubexpr.json  repetition-long.json  repetition.json
examples/: Cargo.toml  fst.rs
old-regex-cli/src/: app.rs
old-regex-cli/src/cmd/count/: matches.rs  which.rs
old-regex-cli/src/cmd/generate/: mod.rs  unicode.rs
regex-automata-debug/: Cargo.toml  main.rs
regex-cli/: Cargo.toml  args.rs  build.rs  escape.rs  main.rs  util.rs
regex-cli/args/: api.rs  backtrack.rs  common.rs  dfa.rs  flags.rs  haystack.rs  hybrid.rs  input.rs  meta.rs  mod.rs  onepass.rs  overlapping.rs  patterns.rs  pikevm.rs  thompson.rs
regex-cli/cmd/: compile_test.rs  debug.rs  mod.rs
regex-cli/cmd/debug/: dfa.rs  literal.rs  mod.rs
regex-cli/cmd/find/: mod.rs
regex-cli/cmd/find/capture/: dfa.rs  mod.rs  nfa.rs
regex-cli/cmd/find/half/: dfa.rs  mod.rs
regex-cli/cmd/find/match/: dfa.rs  mod.rs  nfa.rs
regex-cli/cmd/find/which/: dfa.rs  mod.rs  nfa.rs
regex-cli/cmd/generate/: mod.rs  unicode.rs
regex-cli/cmd/generate/serialize/: dfa.rs
regex-cli/config/: common.rs  input.rs  mod.rs  patterns.rs  syntax.rs  thompson.rs
regex-cli/src/: app.rs  config.rs  escape.rs  macros.rs  main.rs  util.rs
regex-cli/src/cmd/: captures.rs  debug.rs  find.rs  mod.rs
regex-cli/src/cmd/bench/: cmp.rs  count.rs  diff.rs  mod.rs
regex-cli/src/cmd/bench/count/: mod.rs
regex-cli/src/cmd/bench/measure/: compile.rs  count.rs  count_captures.rs  grep.rs  grep_captures.rs  mod.rs  new.rs  regexredux.rs
regex-cli/src/cmd/count/: captures.rs  matches.rs  mod.rs  which.rs
regex-cli/src/cmd/generate/: fowler.rs  mod.rs  unicode.rs
regex-cli/src/ffi/: mod.rs  pcre2.rs  re2.cpp  re2.rs
regex-test/: Cargo.toml
regex-test/src/: escape.rs  lib.rs
scripts/: benchbase  ci  fowler-to-toml  generate-fowler-tests
src/: builder.rs  byte.rs  bytes.rs  classes.rs  codegen.rs  config.rs  dense.rs  dense_ref.rs  determinize.rs  dfa.rs  dfa_ref.rs  error.rs  fnv.rs  id.rs  lib.rs  macros.rs  matcher.rs  matching.rs  minimize.rs  nfa.rs  range_trie.rs  regex.rs  sparse.rs  sparse_set.rs  state_id.rs  transducer.rs  util.rs  word.rs
src/dfa/: accel.rs  automaton.rs  dense.rs  determinize.rs  error.rs  minimize.rs  mod.rs  onepass.rs  regex.rs  remapper.rs  search.rs  search_unsafe.rs  sparse.rs  special.rs  start.rs  transducer.rs
src/hybrid/: dfa.rs  error.rs  id.rs  lazy.rs  mod.rs  regex.rs  search.rs  state.rs
src/meta/: error.rs  limited.rs  literal.rs  mod.rs  regex.rs  reverse_inner.rs  stopat.rs  strategy.rs  wrappers.rs
src/nfa/: compiler.rs  error.rs  map.rs  mod.rs  range_trie.rs
src/nfa/thompson/: backtrack.rs  builder.rs  compiler.rs  error.rs  literal_trie.rs  map.rs  mod.rs  nfa.rs  oldmod.rs  pikevm.rs  range_trie.rs
src/nfa/thompson/pikevm/: mod.rs  regex.rs  vm.rs
src/prefilter/: mod.rs
src/util/: alphabet.rs  bytes.rs  captures.rs  empty.rs  escape.rs  id.rs  int.rs  iter.rs  lazy.rs  look.rs  matchtypes.rs  memchr.rs  mod.rs  nonmax.rs  pool.rs  prefilter.rs  primitives.rs  search.rs  sparse_set.rs  start.rs  syntax.rs  utf8.rs  wire.rs
src/util/determinize/: mod.rs  state.rs
src/util/prefilter/: aho_corasick.rs  imp.rs  memchr.rs  memmem.rs  mod.rs  teddy.rs
src/util/unicode_data/: mod.rs  perl_word.rs
tests/: collection.rs  fowler.rs  matching.rs  regression.rs  suite.rs  tests.rs  unescape.rs  util.rs
tests/data/: anchored.toml  bytes.toml  crazy.toml  earliest.toml  empty.toml  expensive.toml  flags.toml  iter.toml  leftmost-all.toml  misc.toml  multiline.toml  no-unicode.toml  overlapping.toml  regression.toml  set.toml  substring.toml  unicode.toml  utf8.toml  word-boundary.toml
tests/data/fowler/: basic.toml  nullsubexpr.toml  repetition-expensive.toml  repetition-long.toml  repetition.toml
tests/data/fowler/dat/: README
tests/dfa/: api.rs  mod.rs  regression.rs  suite.rs
tests/dfa/onepass/: suite.rs
tests/hybrid/: api.rs  mod.rs  suite.rs
tests/meta/: suite.rs
tests/nfa/thompson/: mod.rs
tests/nfa/thompson/backtrack/: suite.rs
tests/nfa/thompson/pikevm/: api.rs  suite.rs
tests/util/: mod.rs
