[package]
publish = false
name = "regex-automata-bench"
version = "0.0.1"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Criterion benchmark suite for regex-automata."
homepage = "https://github.com/BurntSushi/bstr"
repository = "https://github.com/BurntSushi/regex-automata"
license = "Unlicense/MIT"

[lib]
bench = false

[[bench]]
name = "bstr"
harness = false
path = "src/bench.rs"

[dependencies]
criterion = "0.2"
regex-automata = { version = "*", path = ".." }

[profile.release]
debug = true
