[package]
publish = false
name = "regex-automata-bench"
version = "0.0.1"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Criterion benchmark suite for regex-automata."
homepage = "https://github.com/BurntSushi/regex-automata"
repository = "https://github.com/BurntSushi/regex-automata"
license = "Unlicense/MIT"
workspace = ".."

[lib]
bench = false

[[bench]]
name = "regex-automata"
harness = false
path = "src/bench.rs"

[dependencies]
criterion = "0.3.1"
regex-automata = { version = "*", path = ".." }
