[package]
publish = false
name = "regex-cli"
version = "0.0.1"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A command line tool for debugging, benchmarking and generating regular
expressions.
"""
documentation = "https://docs.rs/regex-cli"
repository = "https://github.com/BurntSushi/regex-automata"
keywords = ["regex", "cli", "debug", "nfa", "dfa"]
license = "Unlicense/MIT"
categories = ["text-processing"]
autotests = false
edition = "2021"

[[bin]]
name = "regex-cli"

[features]
default = []

instrument = ["automata/instrument"]
instrument-pikevm = ["automata/instrument-pikevm"]

[dependencies]
anyhow = "1.0.28"
atty = "0.2.14"
bstr = { version = "1.2", default-features = false, features = ["std"] }
clap = { version = "2.34.0", default-features = false }
# Using an older version here because I am really not a fan of the dependency
# tree explosion that has happened in 0.10.
env_logger = "0.9.3"
log = "0.4.14"
memchr = "2.5.0"
memmap2 = "0.3.0"
once_cell = "1.12.0"
regex = { version = "1.5.4" }
serde = { version = "1.0.137", features = ["derive"] }
syntax = { package = "regex-syntax", version = "0.6.17" }
tabwriter = { version = "1.2.1", features = ["ansi_formatting"] }
termcolor = "1.1.3"
toml = "0.5.9"
unicode-width = "0.1.7"

[dependencies.automata]
package = "regex-automata"
path = ".."
features = ["logging"]
