[package]
publish = false
name = "regex-cli"
version = "0.0.1"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A command line tool for debugging, ad hoc benchmarking and generating regular
expressions.
"""
documentation = "https://docs.rs/regex-cli"
repository = "https://github.com/BurntSushi/regex-automata"
keywords = ["regex", "cli", "debug", "nfa", "dfa"]
license = "Unlicense/MIT"
categories = ["text-processing"]
autotests = false
edition = "2021"

[[bin]]
name = "regex-cli"
path = "main.rs"

[features]
default = []
instrument = ["regex-automata/instrument"]

[dependencies]
anyhow = "1.0.28"
atty = "0.2.14"
bstr = { version = "1.3.0", default-features = false, features = ["std"] }
# Using an older version here because I am really not a fan of the dependency
# tree explosion that has happened in 0.10.
env_logger = "0.9.3"
lexopt = "0.3.0"
log = "0.4.17"
memchr = "2.5.0"
memmap2 = "0.5.10"
once_cell = "1.17.1"
regex = "1.7.1"
regex-automata = { path = "..", features = ["logging"] }
regex-syntax = "0.6.16"
tabwriter = { version = "1.2.1", features = ["ansi_formatting"] }
termcolor = "1.2.0"
textwrap = { version = "0.16.0", default-features = false }
toml = "0.7.2"
unicode-width = "0.1.10"
