[package]
publish = false
name = "regex-cli"
version = "0.0.1"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A command line tool for debugging, ad hoc benchmarking and generating regular
expressions.
"""
documentation = "https://docs.rs/regex-cli"
repository = "https://github.com/BurntSushi/regex-automata"
keywords = ["regex", "cli", "debug", "nfa", "dfa"]
license = "Unlicense/MIT"
categories = ["text-processing"]
autotests = false
edition = "2021"

[[bin]]
name = "regex-cli"
path = "main.rs"

[features]
default = []
instrument = ["regex-automata/internal-instrument"]

[dependencies]
anyhow = "1.0.28"
bstr = { version = "1.4.0", default-features = false, features = ["std"] }
lexopt = "0.3.0"
log = { version = "0.4.17", features = ["std"] }
memmap2 = "0.5.10"
regex = "1.7.1"
regex-automata = { path = "..", features = ["logging"] }
regex-syntax = "0.6.16"
tabwriter = { version = "1.2.1", features = ["ansi_formatting"] }
textwrap = { version = "0.16.0", default-features = false }
